add photo uploader and editor component

--- a/WebApp/API/appsettings.json
+++ b/WebApp/API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "CloudinarySettings": {
-    "ClounName": "itechart",
+    "CloudName": "kerelkarnel",
     "ApiKey": "774512923952811",
     "ApiSecret": "A33uqPfUVLwFL2pIDpD1DlJXv6s"
   },
